change map tag line

--- a/map.html
+++ b/map.html
@@ -2,7 +2,7 @@
 <html>
 <body style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; margin: 0;">
 
-<h1>My First Google Map</h1>
+<h1>Find Your Go To Destination</h1>
 
 <div id="googleMap" style="width:100%; max-width: 600px; height:400px; display: flex; justify-content: center;">
     <iframe src= 
